--- a/src/components/custom-buttons/custom-button.style.scss
+++ b/src/components/custom-buttons/custom-button.style.scss
@@ -2,10 +2,10 @@
   min-width: 165px;
   width: auto;
   height: 50px;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.3px;
   line-height: 50px;
-  padding: 0 35px 0 35px;
-  font-size: 15px;
+  padding: 0 15px 0 15px;
+  font-size: 12px;
   background-color: black;
   color: white;
   text-transform: uppercase;
@@ -19,15 +19,15 @@
     color: black;
     border: 1px solid black;
   }
+}
 
-  &.googleSignin {
-    background-color: #4285f4;
-    color: #fff;
+.googleSignin {
+  background-color: #4285f4;
+  color: #fff;
 
-    &:hover {
-      background-color: #fff;
-      color: #357ae8;
-      border: 2px solid #357ae8;
-    }
+  &:hover {
+    background-color: #fff;
+    color: #357ae8;
+    border: 2px solid #357ae8;
   }
 }
